# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/vars.gni")

generated_typescript_modules = []

all_typescript_module_sources = [
  "components/ImagePreview.js",
  "components/JSPresentationUtils.js",
  "components/Linkifier.js",
  "components/Reload.js",
  "components/TargetDetachedDialog.js",
  "core/common/App.js",
  "core/common/AppProvider.js",
  "core/common/Base64.js",
  "core/common/CharacterIdMap.js",
  "core/common/Color.js",
  "core/common/ColorUtils.js",
  "core/common/Console.js",
  "core/common/Debouncer.js",
  "core/common/EventTarget.js",
  "core/common/JavaScriptMetaData.js",
  "core/common/Lazy.js",
  "core/common/Linkifier.js",
  "core/common/Object.js",
  "core/common/ParsedURL.js",
  "core/common/Progress.js",
  "core/common/QueryParamHandler.js",
  "core/common/ResourceType.js",
  "core/common/Revealer.js",
  "core/common/Runnable.js",
  "core/common/SegmentedRange.js",
  "core/common/SettingRegistration.js",
  "core/common/Settings.js",
  "core/common/SimpleHistoryManager.js",
  "core/common/StringOutputStream.js",
  "core/common/TextDictionary.js",
  "core/common/Throttler.js",
  "core/common/Trie.js",
  "core/common/WasmDisassembly.js",
  "core/common/Worker.js",
  "core/dom_extension/DOMExtension.js",
  "core/host/InspectorFrontendHost.js",
  "core/host/InspectorFrontendHostAPI.js",
  "core/host/Platform.js",
  "core/host/ResourceLoader.js",
  "core/host/UserMetrics.js",
  "core/i18n/i18nImpl.js",
  "core/i18n/i18nTypes.js",
  "core/platform/UIString.js",
  "core/platform/array-utilities.js",
  "core/platform/date-utilities.js",
  "core/platform/keyboard-utilities.js",
  "core/platform/map-utilities.js",
  "core/platform/number-utilities.js",
  "core/platform/set-utilities.js",
  "core/platform/string-utilities.js",
  "core/platform/typescript-utilities.js",
  "core/platform/utilities.js",
  "core/protocol_client/InspectorBackend.js",
  "core/protocol_client/NodeURL.js",
  "core/root/Runtime.js",
  "core/sdk/AccessibilityModel.js",
  "core/sdk/CPUProfileDataModel.js",
  "core/sdk/CPUProfilerModel.js",
  "core/sdk/CSSFontFace.js",
  "core/sdk/CSSMatchedStyles.js",
  "core/sdk/CSSMedia.js",
  "core/sdk/CSSMetadata.js",
  "core/sdk/CSSModel.js",
  "core/sdk/CSSProperty.js",
  "core/sdk/CSSPropertyParser.js",
  "core/sdk/CSSRule.js",
  "core/sdk/CSSStyleDeclaration.js",
  "core/sdk/CSSStyleSheetHeader.js",
  "core/sdk/ChildTargetManager.js",
  "core/sdk/CompilerSourceMappingContentProvider.js",
  "core/sdk/Connections.js",
  "core/sdk/ConsoleModel.js",
  "core/sdk/ConsoleModelTypes.js",
  "core/sdk/Cookie.js",
  "core/sdk/CookieModel.js",
  "core/sdk/CookieParser.js",
  "core/sdk/DOMDebuggerModel.js",
  "core/sdk/DOMModel.js",
  "core/sdk/DebuggerModel.js",
  "core/sdk/EmulationModel.js",
  "core/sdk/FilmStripModel.js",
  "core/sdk/FrameAssociated.js",
  "core/sdk/FrameManager.js",
  "core/sdk/HARLog.js",
  "core/sdk/HeapProfilerModel.js",
  "core/sdk/IOModel.js",
  "core/sdk/IsolateManager.js",
  "core/sdk/IssuesModel.js",
  "core/sdk/LayerTreeBase.js",
  "core/sdk/LogModel.js",
  "core/sdk/NetworkLog.js",
  "core/sdk/NetworkManager.js",
  "core/sdk/NetworkRequest.js",
  "core/sdk/OverlayColorGenerator.js",
  "core/sdk/OverlayModel.js",
  "core/sdk/OverlayPersistentHighlighter.js",
  "core/sdk/PageResourceLoader.js",
  "core/sdk/PaintProfiler.js",
  "core/sdk/PerformanceMetricsModel.js",
  "core/sdk/ProfileTreeModel.js",
  "core/sdk/RemoteObject.js",
  "core/sdk/Resource.js",
  "core/sdk/ResourceTreeModel.js",
  "core/sdk/RuntimeModel.js",
  "core/sdk/SDKModel.js",
  "core/sdk/ScreenCaptureModel.js",
  "core/sdk/Script.js",
  "core/sdk/SecurityOriginManager.js",
  "core/sdk/ServerTiming.js",
  "core/sdk/ServiceWorkerCacheModel.js",
  "core/sdk/ServiceWorkerManager.js",
  "core/sdk/SourceMap.js",
  "core/sdk/SourceMapManager.js",
  "core/sdk/TracingManager.js",
  "core/sdk/TracingModel.js",
  "core/sdk/WebAuthnModel.js",
  "entrypoints/formatter_worker/AcornTokenizer.js",
  "entrypoints/formatter_worker/CSSFormatter.js",
  "entrypoints/formatter_worker/CSSRuleParser.js",
  "entrypoints/formatter_worker/ESTreeWalker.js",
  "entrypoints/formatter_worker/FormattedContentBuilder.js",
  "entrypoints/formatter_worker/FormatterWorker.js",
  "entrypoints/formatter_worker/HTMLFormatter.js",
  "entrypoints/formatter_worker/HTMLOutline.js",
  "entrypoints/formatter_worker/IdentityFormatter.js",
  "entrypoints/formatter_worker/JavaScriptFormatter.js",
  "entrypoints/formatter_worker/JavaScriptOutline.js",
  "entrypoints/heap_snapshot_worker/AllocationProfile.js",
  "entrypoints/heap_snapshot_worker/HeapSnapshot.js",
  "entrypoints/heap_snapshot_worker/HeapSnapshotLoader.js",
  "entrypoints/heap_snapshot_worker/HeapSnapshotWorkerDispatcher.js",
  "entrypoints/startup/RuntimeInstantiator.js",
  "entrypoints/wasmparser_worker/WasmParserWorker.js",
  "generated/ARIAProperties.js",
  "generated/InspectorBackendCommands.js",
  "generated/SupportedCSSProperties.js",
  "inspector_main/InspectorMain.js",
  "inspector_main/RenderingOptions.js",
  "legacy_test_runner/test_runner/TestRunner.js",
  "main/ExecutionContextSelector.js",
  "main/MainImpl.js",
  "main/SimpleApp.js",
  "models/bindings/BreakpointManager.js",
  "models/bindings/CSSWorkspaceBinding.js",
  "models/bindings/CompilerScriptMapping.js",
  "models/bindings/ContentProviderBasedProject.js",
  "models/bindings/DebuggerLanguagePlugins.js",
  "models/bindings/DebuggerWorkspaceBinding.js",
  "models/bindings/DefaultScriptMapping.js",
  "models/bindings/FileUtils.js",
  "models/bindings/IgnoreListManager.js",
  "models/bindings/LiveLocation.js",
  "models/bindings/NetworkProject.js",
  "models/bindings/PresentationConsoleMessageHelper.js",
  "models/bindings/ResourceMapping.js",
  "models/bindings/ResourceScriptMapping.js",
  "models/bindings/ResourceUtils.js",
  "models/bindings/SASSSourceMapping.js",
  "models/bindings/StylesSourceMapping.js",
  "models/bindings/TempFile.js",
  "models/extensions/ExtensionAPI.js",
  "models/extensions/ExtensionPanel.js",
  "models/extensions/ExtensionServer.js",
  "models/extensions/ExtensionTraceProvider.js",
  "models/extensions/ExtensionView.js",
  "models/extensions/LanguageExtensionEndpoint.js",
  "models/formatter/FormatterWorkerPool.js",
  "models/formatter/ScriptFormatter.js",
  "models/formatter/SourceFormatter.js",
  "models/har_importer/HARFormat.js",
  "models/har_importer/HARImporter.js",
  "models/heap_snapshot_model/HeapSnapshotModel.js",
  "models/issues_manager/ContentSecurityPolicyIssue.js",
  "models/issues_manager/ContrastCheckTrigger.js",
  "models/issues_manager/CorsIssue.js",
  "models/issues_manager/CrossOriginEmbedderPolicyIssue.js",
  "models/issues_manager/HeavyAdIssue.js",
  "models/issues_manager/Issue.js",
  "models/issues_manager/IssuesManager.js",
  "models/issues_manager/LowTextContrastIssue.js",
  "models/issues_manager/MarkdownIssueDescription.js",
  "models/issues_manager/MixedContentIssue.js",
  "models/issues_manager/RelatedIssue.js",
  "models/issues_manager/SameSiteCookieIssue.js",
  "models/issues_manager/SharedArrayBufferIssue.js",
  "models/issues_manager/SourceFrameIssuesManager.js",
  "models/issues_manager/TrustedWebActivityIssue.js",
  "models/javascript_metadata/JavaScriptMetadata.js",
  "models/javascript_metadata/NativeFunctions.js",
  "models/logs/LogManager.js",
  "models/persistence/Automapping.js",
  "models/persistence/EditFileSystemView.js",
  "models/persistence/FileSystemWorkspaceBinding.js",
  "models/persistence/IsolatedFileSystem.js",
  "models/persistence/IsolatedFileSystemManager.js",
  "models/persistence/NetworkPersistenceManager.js",
  "models/persistence/PersistenceActions.js",
  "models/persistence/PersistenceImpl.js",
  "models/persistence/PersistenceUtils.js",
  "models/persistence/PlatformFileSystem.js",
  "models/persistence/WorkspaceSettingsTab.js",
  "models/recorder/Conditions.js",
  "models/recorder/RecorderModel.js",
  "models/recorder/RecordingEventHandler.js",
  "models/recorder/RecordingFileSystem.js",
  "models/recorder/RecordingScriptWriter.js",
  "models/recorder/RecordingSession.js",
  "models/recorder/Steps.js",
  "models/text_utils/CodeMirrorUtils.js",
  "models/text_utils/ContentProvider.js",
  "models/text_utils/StaticContentProvider.js",
  "models/text_utils/Text.js",
  "models/text_utils/TextCursor.js",
  "models/text_utils/TextRange.js",
  "models/text_utils/TextUtils.js",
  "models/timeline_model/TimelineFrameModel.js",
  "models/timeline_model/TimelineIRModel.js",
  "models/timeline_model/TimelineJSProfile.js",
  "models/timeline_model/TimelineModel.js",
  "models/timeline_model/TimelineModelFilter.js",
  "models/timeline_model/TimelineProfileTree.js",
  "models/timeline_model/TracingLayerTree.js",
  "models/workspace/FileManager.js",
  "models/workspace/UISourceCode.js",
  "models/workspace/WorkspaceImpl.js",
  "node_main/NodeConnectionsPanel.js",
  "node_main/NodeMain.js",
  "panels/accessibility/ARIAAttributesView.js",
  "panels/accessibility/ARIAMetadata.js",
  "panels/accessibility/AXBreadcrumbsPane.js",
  "panels/accessibility/AccessibilityNodeView.js",
  "panels/accessibility/AccessibilitySidebarView.js",
  "panels/accessibility/AccessibilityStrings.js",
  "panels/accessibility/AccessibilitySubPane.js",
  "panels/accessibility/SourceOrderView.js",
  "panels/animation/AnimationGroupPreviewUI.js",
  "panels/animation/AnimationModel.js",
  "panels/animation/AnimationScreenshotPopover.js",
  "panels/animation/AnimationTimeline.js",
  "panels/animation/AnimationUI.js",
  "panels/application/AppManifestView.js",
  "panels/application/ApplicationCacheItemsView.js",
  "panels/application/ApplicationCacheModel.js",
  "panels/application/ApplicationPanelCacheSection.js",
  "panels/application/ApplicationPanelSidebar.js",
  "panels/application/ApplicationPanelTreeElement.js",
  "panels/application/BackForwardCacheView.js",
  "panels/application/BackgroundServiceModel.js",
  "panels/application/BackgroundServiceView.js",
  "panels/application/CookieItemsView.js",
  "panels/application/DOMStorageItemsView.js",
  "panels/application/DOMStorageModel.js",
  "panels/application/DatabaseModel.js",
  "panels/application/DatabaseQueryView.js",
  "panels/application/DatabaseTableView.js",
  "panels/application/FrameDetailsView.js",
  "panels/application/IndexedDBModel.js",
  "panels/application/IndexedDBViews.js",
  "panels/application/OpenedWindowDetailsView.js",
  "panels/application/ResourcesPanel.js",
  "panels/application/ServiceWorkerCacheViews.js",
  "panels/application/ServiceWorkerUpdateCycleView.js",
  "panels/application/ServiceWorkersView.js",
  "panels/application/StackTrace.js",
  "panels/application/StorageItemsView.js",
  "panels/application/StorageView.js",
  "panels/application/TrustTokensView.js",
  "panels/browser_debugger/CSPViolationBreakpointsSidebarPane.js",
  "panels/browser_debugger/CategorizedBreakpointsSidebarPane.js",
  "panels/browser_debugger/DOMBreakpointsSidebarPane.js",
  "panels/browser_debugger/EventListenerBreakpointsSidebarPane.js",
  "panels/browser_debugger/ModuleUIStrings.js",
  "panels/browser_debugger/ObjectEventListenersSidebarPane.js",
  "panels/browser_debugger/XHRBreakpointsSidebarPane.js",
  "panels/changes/ChangesHighlighter.js",
  "panels/changes/ChangesSidebar.js",
  "panels/changes/ChangesTextEditor.js",
  "panels/changes/ChangesView.js",
  "panels/console/ConsoleContextSelector.js",
  "panels/console/ConsoleFilter.js",
  "panels/console/ConsolePanel.js",
  "panels/console/ConsolePinPane.js",
  "panels/console/ConsolePrompt.js",
  "panels/console/ConsoleSidebar.js",
  "panels/console/ConsoleView.js",
  "panels/console/ConsoleViewMessage.js",
  "panels/console/ConsoleViewport.js",
  "panels/console_counters/IssueCounter.js",
  "panels/console_counters/WarningErrorCounter.js",
  "panels/coverage/CoverageDecorationManager.js",
  "panels/coverage/CoverageListView.js",
  "panels/coverage/CoverageModel.js",
  "panels/coverage/CoverageView.js",
  "panels/css_overview/CSSOverviewCompletedView.js",
  "panels/css_overview/CSSOverviewController.js",
  "panels/css_overview/CSSOverviewModel.js",
  "panels/css_overview/CSSOverviewPanel.js",
  "panels/css_overview/CSSOverviewProcessingView.js",
  "panels/css_overview/CSSOverviewSidebarPanel.js",
  "panels/css_overview/CSSOverviewStartView.js",
  "panels/css_overview/CSSOverviewUnusedDeclarations.js",
  "panels/developer_resources/DeveloperResourcesListView.js",
  "panels/developer_resources/DeveloperResourcesView.js",
  "panels/elements/AccessibilityTreeUtils.js",
  "panels/elements/AccessibilityTreeView.js",
  "panels/elements/Adorner.js",
  "panels/elements/AdornerManager.js",
  "panels/elements/AdornerSettingsPane.js",
  "panels/elements/CSSPropertyIconResolver.js",
  "panels/elements/ClassesPaneWidget.js",
  "panels/elements/ColorSwatchPopoverIcon.js",
  "panels/elements/ComputedStyleModel.js",
  "panels/elements/ComputedStyleProperty.js",
  "panels/elements/ComputedStyleTrace.js",
  "panels/elements/ComputedStyleWidget.js",
  "panels/elements/DOMLinkifier.js",
  "panels/elements/DOMPath.js",
  "panels/elements/ElementStatePaneWidget.js",
  "panels/elements/ElementsBreadcrumbs.js",
  "panels/elements/ElementsBreadcrumbsUtils.js",
  "panels/elements/ElementsPanel.js",
  "panels/elements/ElementsPanelLink.js",
  "panels/elements/ElementsSidebarPane.js",
  "panels/elements/ElementsTreeElement.js",
  "panels/elements/ElementsTreeElementHighlighter.js",
  "panels/elements/ElementsTreeOutline.js",
  "panels/elements/EventListenersWidget.js",
  "panels/elements/FlexboxEditor.js",
  "panels/elements/FlexboxEditorWidget.js",
  "panels/elements/ImagePreviewPopover.js",
  "panels/elements/InspectElementModeController.js",
  "panels/elements/LayoutPane.js",
  "panels/elements/LayoutPaneUtils.js",
  "panels/elements/LayoutSidebarPane.js",
  "panels/elements/MarkerDecorator.js",
  "panels/elements/MetricsSidebarPane.js",
  "panels/elements/NodeStackTraceWidget.js",
  "panels/elements/NodeText.js",
  "panels/elements/PlatformFontsWidget.js",
  "panels/elements/PropertiesWidget.js",
  "panels/elements/PropertyNameCategories.js",
  "panels/elements/StylePropertyHighlighter.js",
  "panels/elements/StylePropertyTreeElement.js",
  "panels/elements/StylesSidebarPane.js",
  "panels/emulation/AdvancedApp.js",
  "panels/emulation/DeviceModeModel.js",
  "panels/emulation/DeviceModeToolbar.js",
  "panels/emulation/DeviceModeView.js",
  "panels/emulation/DeviceModeWrapper.js",
  "panels/emulation/DevicesSettingsTab.js",
  "panels/emulation/EmulatedDevices.js",
  "panels/emulation/InspectedPagePlaceholder.js",
  "panels/emulation/LocationsSettingsTab.js",
  "panels/emulation/MediaQueryInspector.js",
  "panels/emulation/ModuleUIStrings.js",
  "panels/emulation/SensorsView.js",
  "panels/emulation/StructuredHeaders.js",
  "panels/emulation/UserAgentMetadata.js",
  "panels/event_listeners/EventListenersUtils.js",
  "panels/event_listeners/EventListenersView.js",
  "panels/help/HelpImpl.js",
  "panels/help/ReleaseNoteText.js",
  "panels/help/ReleaseNoteView.js",
  "panels/input/InputModel.js",
  "panels/input/InputTimeline.js",
  "panels/issues/AffectedBlockedByResponseView.js",
  "panels/issues/AffectedCookiesView.js",
  "panels/issues/AffectedElementsView.js",
  "panels/issues/AffectedElementsWithLowContrastView.js",
  "panels/issues/AffectedHeavyAdView.js",
  "panels/issues/AffectedResourcesView.js",
  "panels/issues/AffectedSharedArrayBufferIssueDetailsView.js",
  "panels/issues/AffectedTrustedWebActivityIssueDetailsView.js",
  "panels/issues/CSPViolationsListView.js",
  "panels/issues/CSPViolationsView.js",
  "panels/issues/ComboBoxOfCheckBoxes.js",
  "panels/issues/CorsIssueDetailsView.js",
  "panels/issues/IssueAggregator.js",
  "panels/issues/IssueRevealer.js",
  "panels/issues/IssueView.js",
  "panels/issues/IssuesPane.js",
  "panels/layer_viewer/LayerDetailsView.js",
  "panels/layer_viewer/LayerTreeOutline.js",
  "panels/layer_viewer/LayerViewHost.js",
  "panels/layer_viewer/Layers3DView.js",
  "panels/layer_viewer/PaintProfilerView.js",
  "panels/layer_viewer/TransformController.js",
  "panels/layers/LayerPaintProfilerView.js",
  "panels/layers/LayerTreeModel.js",
  "panels/layers/LayersPanel.js",
  "panels/lighthouse/LighthouseController.js",
  "panels/lighthouse/LighthousePanel.js",
  "panels/lighthouse/LighthouseProtocolService.js",
  "panels/lighthouse/LighthouseReportRenderer.js",
  "panels/lighthouse/LighthouseReportSelector.js",
  "panels/lighthouse/LighthouseReporterTypes.js",
  "panels/lighthouse/LighthouseStartView.js",
  "panels/lighthouse/LighthouseStatusView.js",
  "panels/lighthouse/RadioSetting.js",
  "panels/media/EventDisplayTable.js",
  "panels/media/EventTimelineView.js",
  "panels/media/MainView.js",
  "panels/media/MediaModel.js",
  "panels/media/PlayerDetailView.js",
  "panels/media/PlayerListView.js",
  "panels/media/PlayerMessagesView.js",
  "panels/media/PlayerPropertiesView.js",
  "panels/media/TickingFlameChart.js",
  "panels/media/TickingFlameChartHelpers.js",
  "panels/mobile_throttling/MobileThrottlingSelector.js",
  "panels/mobile_throttling/NetworkPanelIndicator.js",
  "panels/mobile_throttling/NetworkThrottlingSelector.js",
  "panels/mobile_throttling/ThrottlingManager.js",
  "panels/mobile_throttling/ThrottlingPresets.js",
  "panels/mobile_throttling/ThrottlingSettingsTab.js",
  "panels/network/BinaryResourceView.js",
  "panels/network/BlockedURLsPane.js",
  "panels/network/EventSourceMessagesView.js",
  "panels/network/HARWriter.js",
  "panels/network/NetworkConfigView.js",
  "panels/network/NetworkDataGridNode.js",
  "panels/network/NetworkFrameGrouper.js",
  "panels/network/NetworkItemView.js",
  "panels/network/NetworkLogView.js",
  "panels/network/NetworkLogViewColumns.js",
  "panels/network/NetworkManageCustomHeadersView.js",
  "panels/network/NetworkOverview.js",
  "panels/network/NetworkPanel.js",
  "panels/network/NetworkSearchScope.js",
  "panels/network/NetworkTimeCalculator.js",
  "panels/network/NetworkWaterfallColumn.js",
  "panels/network/RequestCookiesView.js",
  "panels/network/RequestHTMLView.js",
  "panels/network/RequestHeadersView.js",
  "panels/network/RequestInitiatorView.js",
  "panels/network/RequestPreviewView.js",
  "panels/network/RequestResponseView.js",
  "panels/network/RequestTimingView.js",
  "panels/network/RequestTrustTokensView.js",
  "panels/network/ResourceWebSocketFrameView.js",
  "panels/network/SignedExchangeInfoView.js",
  "panels/performance_monitor/PerformanceMonitor.js",
  "panels/profiler/BottomUpProfileDataGrid.js",
  "panels/profiler/CPUProfileFlameChart.js",
  "panels/profiler/CPUProfileView.js",
  "panels/profiler/ChildrenProvider.js",
  "panels/profiler/HeapProfileView.js",
  "panels/profiler/HeapProfilerPanel.js",
  "panels/profiler/HeapSnapshotDataGrids.js",
  "panels/profiler/HeapSnapshotGridNodes.js",
  "panels/profiler/HeapSnapshotProxy.js",
  "panels/profiler/HeapSnapshotView.js",
  "panels/profiler/HeapTimelineOverview.js",
  "panels/profiler/IsolateSelector.js",
  "panels/profiler/LiveHeapProfileView.js",
  "panels/profiler/ModuleUIStrings.js",
  "panels/profiler/ProfileDataGrid.js",
  "panels/profiler/ProfileHeader.js",
  "panels/profiler/ProfileLauncherView.js",
  "panels/profiler/ProfileSidebarTreeElement.js",
  "panels/profiler/ProfileTypeRegistry.js",
  "panels/profiler/ProfileView.js",
  "panels/profiler/ProfilesPanel.js",
  "panels/profiler/TopDownProfileDataGrid.js",
  "panels/protocol_monitor/ProtocolMonitor.js",
  "panels/screencast/InputModel.js",
  "panels/screencast/ScreencastApp.js",
  "panels/screencast/ScreencastView.js",
  "panels/search/SearchConfig.js",
  "panels/search/SearchResultsPane.js",
  "panels/search/SearchView.js",
  "panels/security/SecurityModel.js",
  "panels/security/SecurityPanel.js",
  "panels/settings/FrameworkIgnoreListSettingsTab.js",
  "panels/settings/KeybindsSettingsTab.js",
  "panels/settings/SettingsScreen.js",
  "panels/snippets/ModuleUIStrings.js",
  "panels/snippets/ScriptSnippetFileSystem.js",
  "panels/snippets/SnippetsQuickOpen.js",
  "panels/sources/AddSourceMapURLDialog.js",
  "panels/sources/BreakpointEditDialog.js",
  "panels/sources/CSSPlugin.js",
  "panels/sources/CallStackSidebarPane.js",
  "panels/sources/CoveragePlugin.js",
  "panels/sources/DebuggerPausedMessage.js",
  "panels/sources/DebuggerPlugin.js",
  "panels/sources/EditingLocationHistoryManager.js",
  "panels/sources/FilePathScoreFunction.js",
  "panels/sources/FilteredUISourceCodeListProvider.js",
  "panels/sources/GoToLineQuickOpen.js",
  "panels/sources/GutterDiffPlugin.js",
  "panels/sources/InplaceFormatterEditorAction.js",
  "panels/sources/JavaScriptBreakpointsSidebarPane.js",
  "panels/sources/JavaScriptCompilerPlugin.js",
  "panels/sources/ModuleUIStrings.js",
  "panels/sources/NavigatorView.js",
  "panels/sources/OpenFileQuickOpen.js",
  "panels/sources/OutlineQuickOpen.js",
  "panels/sources/Plugin.js",
  "panels/sources/RecorderPlugin.js",
  "panels/sources/ScopeChainSidebarPane.js",
  "panels/sources/ScriptFormatterEditorAction.js",
  "panels/sources/ScriptOriginPlugin.js",
  "panels/sources/SearchSourcesView.js",
  "panels/sources/SnippetsPlugin.js",
  "panels/sources/SourceMapNamesResolver.js",
  "panels/sources/SourcesNavigator.js",
  "panels/sources/SourcesPanel.js",
  "panels/sources/SourcesSearchScope.js",
  "panels/sources/SourcesView.js",
  "panels/sources/TabbedEditorContainer.js",
  "panels/sources/ThreadsSidebarPane.js",
  "panels/sources/UISourceCodeFrame.js",
  "panels/sources/WatchExpressionsSidebarPane.js",
  "panels/timeline/CLSLinkifier.js",
  "panels/timeline/CountersGraph.js",
  "panels/timeline/EventsTimelineTreeView.js",
  "panels/timeline/ExtensionTracingSession.js",
  "panels/timeline/PerformanceModel.js",
  "panels/timeline/TimelineController.js",
  "panels/timeline/TimelineDetailsView.js",
  "panels/timeline/TimelineEventOverview.js",
  "panels/timeline/TimelineFilters.js",
  "panels/timeline/TimelineFlameChartDataProvider.js",
  "panels/timeline/TimelineFlameChartNetworkDataProvider.js",
  "panels/timeline/TimelineFlameChartView.js",
  "panels/timeline/TimelineHistoryManager.js",
  "panels/timeline/TimelineLayersView.js",
  "panels/timeline/TimelineLoader.js",
  "panels/timeline/TimelinePaintProfilerView.js",
  "panels/timeline/TimelinePanel.js",
  "panels/timeline/TimelineTreeView.js",
  "panels/timeline/TimelineUIUtils.js",
  "panels/timeline/UIDevtoolsController.js",
  "panels/timeline/UIDevtoolsUtils.js",
  "panels/timeline/WebVitalsLane.js",
  "panels/timeline/WebVitalsTimeline.js",
  "panels/timeline/WebVitalsTimelineUtils.js",
  "panels/timeline/WebVitalsTooltip.js",
  "panels/web_audio/AudioContextContentBuilder.js",
  "panels/web_audio/AudioContextSelector.js",
  "panels/web_audio/WebAudioModel.js",
  "panels/web_audio/WebAudioView.js",
  "panels/web_audio/graph_visualizer/EdgeView.js",
  "panels/web_audio/graph_visualizer/GraphManager.js",
  "panels/web_audio/graph_visualizer/GraphStyle.js",
  "panels/web_audio/graph_visualizer/GraphView.js",
  "panels/web_audio/graph_visualizer/NodeRendererUtility.js",
  "panels/web_audio/graph_visualizer/NodeView.js",
  "third_party/acorn-loose/package/dist/acorn-loose.mjs",
  "third_party/acorn/package/dist/acorn.mjs",
  "third_party/chromium/client-variations/ClientVariations.js",
  "third_party/codemirror/package/addon/comment/comment.js",
  "third_party/codemirror/package/addon/edit/closebrackets.js",
  "third_party/codemirror/package/addon/edit/matchbrackets.js",
  "third_party/codemirror/package/addon/fold/brace-fold.js",
  "third_party/codemirror/package/addon/fold/foldcode.js",
  "third_party/codemirror/package/addon/fold/foldgutter.js",
  "third_party/codemirror/package/addon/mode/multiplex.js",
  "third_party/codemirror/package/addon/mode/overlay.js",
  "third_party/codemirror/package/addon/mode/simple.js",
  "third_party/codemirror/package/addon/runmode/runmode-standalone.js",
  "third_party/codemirror/package/addon/selection/active-line.js",
  "third_party/codemirror/package/addon/selection/mark-selection.js",
  "third_party/codemirror/package/lib/codemirror.js",
  "third_party/codemirror/package/mode/clike/clike.js",
  "third_party/codemirror/package/mode/clojure/clojure.js",
  "third_party/codemirror/package/mode/coffeescript/coffeescript.js",
  "third_party/codemirror/package/mode/css/css.js",
  "third_party/codemirror/package/mode/htmlembedded/htmlembedded.js",
  "third_party/codemirror/package/mode/htmlmixed/htmlmixed.js",
  "third_party/codemirror/package/mode/javascript/javascript.js",
  "third_party/codemirror/package/mode/jsx/jsx.js",
  "third_party/codemirror/package/mode/livescript/livescript.js",
  "third_party/codemirror/package/mode/markdown/markdown.js",
  "third_party/codemirror/package/mode/php/php.js",
  "third_party/codemirror/package/mode/python/python.js",
  "third_party/codemirror/package/mode/shell/shell.js",
  "third_party/codemirror/package/mode/wast/wast.js",
  "third_party/codemirror/package/mode/xml/xml.js",
  "third_party/diff/DiffWrapper.js",
  "third_party/diff/diff_match_patch.js",
  "third_party/i18n/i18n-bundle.js",
  "third_party/lighthouse/report-assets/report-generator.js",
  "third_party/lighthouse/report-assets/report.js",
  "third_party/lit-html/directives.js",
  "third_party/lit-html/package/directives/class-map.js",
  "third_party/lit-html/package/directives/if-defined.js",
  "third_party/lit-html/package/directives/live.js",
  "third_party/lit-html/package/directives/repeat.js",
  "third_party/lit-html/package/directives/style-map.js",
  "third_party/lit-html/package/directives/until.js",
  "third_party/lit-html/package/lib/default-template-processor.js",
  "third_party/lit-html/package/lib/directive.js",
  "third_party/lit-html/package/lib/dom.js",
  "third_party/lit-html/package/lib/part.js",
  "third_party/lit-html/package/lib/parts.js",
  "third_party/lit-html/package/lib/render.js",
  "third_party/lit-html/package/lib/template-factory.js",
  "third_party/lit-html/package/lib/template-instance.js",
  "third_party/lit-html/package/lib/template-result.js",
  "third_party/lit-html/package/lib/template.js",
  "third_party/lit-html/package/lit-html.js",
  "third_party/marked/package/lib/marked.esm.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/api-docs-entry.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Accessibility.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/AriaQueryHandler.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Browser.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/BrowserConnector.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/BrowserWebSocketTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Connection.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ConnectionTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ConsoleMessage.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Coverage.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/DOMWorld.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Debug.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/DeviceDescriptors.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Dialog.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EmulationManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Errors.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EvalTypes.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EventEmitter.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Events.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ExecutionContext.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/FileChooser.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/FrameManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/HTTPRequest.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/HTTPResponse.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Input.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/JSHandle.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/LifecycleWatcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/NetworkManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/PDFOptions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Page.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Product.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Puppeteer.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/PuppeteerViewport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/QueryHandler.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/SecurityDetails.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Target.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/TimeoutSettings.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Tracing.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/USKeyboardLayout.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/WebWorker.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/assert.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/fetch.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/helper.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/environment.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/initialize-node.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/initialize-web.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node-puppeteer-core.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/BrowserFetcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/BrowserRunner.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/LaunchOptions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/Launcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/NodeWebSocketTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/PipeTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/Puppeteer.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/install.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/revisions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/web.js",
  "third_party/puppeteer/package/lib/esm/vendor/mitt/src/index.js",
  "third_party/wasmparser/package/dist/esm/WasmDis.js",
  "third_party/wasmparser/package/dist/esm/WasmParser.js",
  "ui/components/data_grid/DataGrid.js",
  "ui/components/data_grid/DataGridContextMenuUtils.js",
  "ui/components/data_grid/DataGridController.js",
  "ui/components/data_grid/DataGridControllerIntegrator.js",
  "ui/components/data_grid/DataGridRenderers.js",
  "ui/components/data_grid/DataGridUtils.js",
  "ui/components/expandable_list/ExpandableList.js",
  "ui/components/helpers/component-server-setup.js",
  "ui/components/helpers/directives.js",
  "ui/components/helpers/get-stylesheet.js",
  "ui/components/helpers/set-css-property.js",
  "ui/components/icon_button/Icon.js",
  "ui/components/icon_button/IconButton.js",
  "ui/components/linear_memory_inspector/LinearMemoryInspector.js",
  "ui/components/linear_memory_inspector/LinearMemoryInspectorController.js",
  "ui/components/linear_memory_inspector/LinearMemoryInspectorPane.js",
  "ui/components/linear_memory_inspector/LinearMemoryInspectorUtils.js",
  "ui/components/linear_memory_inspector/LinearMemoryNavigator.js",
  "ui/components/linear_memory_inspector/LinearMemoryValueInterpreter.js",
  "ui/components/linear_memory_inspector/LinearMemoryViewer.js",
  "ui/components/linear_memory_inspector/ValueInterpreterDisplay.js",
  "ui/components/linear_memory_inspector/ValueInterpreterDisplayUtils.js",
  "ui/components/linear_memory_inspector/ValueInterpreterSettings.js",
  "ui/components/linkifier/LinkifierImpl.js",
  "ui/components/linkifier/LinkifierUtils.js",
  "ui/components/markdown_view/MarkdownImage.js",
  "ui/components/markdown_view/MarkdownImagesMap.js",
  "ui/components/markdown_view/MarkdownLink.js",
  "ui/components/markdown_view/MarkdownLinksMap.js",
  "ui/components/markdown_view/MarkdownView.js",
  "ui/components/render_coordinator/RenderCoordinator.js",
  "ui/components/report_view/ReportView.js",
  "ui/components/survey_link/SurveyLink.js",
  "ui/components/tree_outline/TreeOutline.js",
  "ui/components/tree_outline/TreeOutlineUtils.js",
  "ui/legacy/ARIAUtils.js",
  "ui/legacy/ActionRegistration.js",
  "ui/legacy/ActionRegistry.js",
  "ui/legacy/Context.js",
  "ui/legacy/ContextFlavorListener.js",
  "ui/legacy/ContextMenu.js",
  "ui/legacy/Dialog.js",
  "ui/legacy/DockController.js",
  "ui/legacy/DropTarget.js",
  "ui/legacy/EmptyWidget.js",
  "ui/legacy/FilterBar.js",
  "ui/legacy/FilterSuggestionBuilder.js",
  "ui/legacy/ForwardedInputEventHandler.js",
  "ui/legacy/Fragment.js",
  "ui/legacy/Geometry.js",
  "ui/legacy/GlassPane.js",
  "ui/legacy/HistoryInput.js",
  "ui/legacy/Icon.js",
  "ui/legacy/Infobar.js",
  "ui/legacy/InplaceEditor.js",
  "ui/legacy/InspectorView.js",
  "ui/legacy/KeyboardShortcut.js",
  "ui/legacy/ListControl.js",
  "ui/legacy/ListModel.js",
  "ui/legacy/ListWidget.js",
  "ui/legacy/Panel.js",
  "ui/legacy/PopoverHelper.js",
  "ui/legacy/ProgressIndicator.js",
  "ui/legacy/RemoteDebuggingTerminatedScreen.js",
  "ui/legacy/ReportView.js",
  "ui/legacy/ResizerWidget.js",
  "ui/legacy/RootView.js",
  "ui/legacy/SearchableView.js",
  "ui/legacy/SettingsUI.js",
  "ui/legacy/ShortcutRegistry.js",
  "ui/legacy/SoftContextMenu.js",
  "ui/legacy/SoftDropDown.js",
  "ui/legacy/SplitWidget.js",
  "ui/legacy/SuggestBox.js",
  "ui/legacy/TabbedPane.js",
  "ui/legacy/TargetCrashedScreen.js",
  "ui/legacy/TextEditor.js",
  "ui/legacy/TextPrompt.js",
  "ui/legacy/ThrottledWidget.js",
  "ui/legacy/Toolbar.js",
  "ui/legacy/Tooltip.js",
  "ui/legacy/Treeoutline.js",
  "ui/legacy/UIUtils.js",
  "ui/legacy/View.js",
  "ui/legacy/ViewManager.js",
  "ui/legacy/ViewRegistration.js",
  "ui/legacy/Widget.js",
  "ui/legacy/XElement.js",
  "ui/legacy/XLink.js",
  "ui/legacy/XWidget.js",
  "ui/legacy/ZoomManager.js",
  "ui/legacy/components/color_picker/ContrastDetails.js",
  "ui/legacy/components/color_picker/ContrastInfo.js",
  "ui/legacy/components/color_picker/ContrastOverlay.js",
  "ui/legacy/components/color_picker/Spectrum.js",
  "ui/legacy/components/cookie_table/CookiesTable.js",
  "ui/legacy/components/data_grid/DataGrid.js",
  "ui/legacy/components/data_grid/ShowMoreDataGridNode.js",
  "ui/legacy/components/data_grid/SortableDataGrid.js",
  "ui/legacy/components/data_grid/ViewportDataGrid.js",
  "ui/legacy/components/inline_editor/BezierEditor.js",
  "ui/legacy/components/inline_editor/BezierUI.js",
  "ui/legacy/components/inline_editor/CSSAngle.js",
  "ui/legacy/components/inline_editor/CSSAngleEditor.js",
  "ui/legacy/components/inline_editor/CSSAngleSwatch.js",
  "ui/legacy/components/inline_editor/CSSAngleUtils.js",
  "ui/legacy/components/inline_editor/CSSShadowEditor.js",
  "ui/legacy/components/inline_editor/CSSShadowModel.js",
  "ui/legacy/components/inline_editor/CSSVarSwatch.js",
  "ui/legacy/components/inline_editor/ColorSwatch.js",
  "ui/legacy/components/inline_editor/FontEditor.js",
  "ui/legacy/components/inline_editor/FontEditorUnitConverter.js",
  "ui/legacy/components/inline_editor/FontEditorUtils.js",
  "ui/legacy/components/inline_editor/SwatchPopoverHelper.js",
  "ui/legacy/components/inline_editor/Swatches.js",
  "ui/legacy/components/object_ui/CustomPreviewComponent.js",
  "ui/legacy/components/object_ui/JavaScriptAutocomplete.js",
  "ui/legacy/components/object_ui/JavaScriptREPL.js",
  "ui/legacy/components/object_ui/ObjectPopoverHelper.js",
  "ui/legacy/components/object_ui/ObjectPropertiesSection.js",
  "ui/legacy/components/object_ui/RemoteObjectPreviewFormatter.js",
  "ui/legacy/components/perf_ui/ChartViewport.js",
  "ui/legacy/components/perf_ui/FilmStripView.js",
  "ui/legacy/components/perf_ui/FlameChart.js",
  "ui/legacy/components/perf_ui/GCActionDelegate.js",
  "ui/legacy/components/perf_ui/LineLevelProfile.js",
  "ui/legacy/components/perf_ui/LiveHeapProfile.js",
  "ui/legacy/components/perf_ui/NetworkPriorities.js",
  "ui/legacy/components/perf_ui/OverviewGrid.js",
  "ui/legacy/components/perf_ui/PieChart.js",
  "ui/legacy/components/perf_ui/TimelineGrid.js",
  "ui/legacy/components/perf_ui/TimelineOverviewPane.js",
  "ui/legacy/components/quick_open/CommandMenu.js",
  "ui/legacy/components/quick_open/FilteredListWidget.js",
  "ui/legacy/components/quick_open/HelpQuickOpen.js",
  "ui/legacy/components/quick_open/QuickInput.js",
  "ui/legacy/components/quick_open/QuickOpen.js",
  "ui/legacy/components/quick_open/QuickPick.js",
  "ui/legacy/components/source_frame/BinaryResourceViewFactory.js",
  "ui/legacy/components/source_frame/FontView.js",
  "ui/legacy/components/source_frame/ImageView.js",
  "ui/legacy/components/source_frame/JSONView.js",
  "ui/legacy/components/source_frame/PreviewFactory.js",
  "ui/legacy/components/source_frame/ResourceSourceFrame.js",
  "ui/legacy/components/source_frame/SourceCodeDiff.js",
  "ui/legacy/components/source_frame/SourceFrame.js",
  "ui/legacy/components/source_frame/SourcesTextEditor.js",
  "ui/legacy/components/source_frame/XMLView.js",
  "ui/legacy/components/text_editor/CodeMirrorTextEditor.js",
  "ui/legacy/components/text_editor/SyntaxHighlighter.js",
  "ui/legacy/components/text_editor/TextEditorAutocompleteController.js",
  "ui/legacy/components/text_editor/cm_modes.js",
  "ui/legacy/theme_support/theme_support_impl.js",
  "ui/legacy/utils/append-style.js",
  "ui/legacy/utils/create-shadow-root-with-core-styles.js",
  "ui/legacy/utils/focus-changed.js",
  "ui/legacy/utils/inject-core-styles.js",
  "ui/legacy/utils/measured-scrollbar-width.js",
  "ui/legacy/utils/register-custom-element.js",
  "ui/legacy/utils/utils.js",
  "webauthn/WebauthnPane.js",
  "worker_main/WorkerMain.js",
  "workspace_diff/WorkspaceDiff.js",
]

foreach(module, all_typescript_module_sources) {
  if (is_debug) {
    generated_typescript_modules +=
        [ "$root_gen_dir/" + devtools_location + "front_end/$module" ]
  }
}
