# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

devtools_image_files = [
  "accelerometer-bottom.png",
  "accelerometer-left.png",
  "accelerometer-right.png",
  "accelerometer-top.png",
  "checker.png",
  "chromeLeft.avif",
  "chromeMiddle.avif",
  "chromeRight.avif",
  "cssoverview_icons_2x.avif",
  "navigationControls_2x.png",
  "navigationControls.png",
  "nodeIcon.avif",
  "popoverArrows.png",
  "searchNext.png",
  "searchPrev.png",
  "toolbarResizerVertical.png",
  "touchCursor_2x.png",
  "touchCursor.png",
  "whatsnew.avif",
]

devtools_svg_sources = [
  "3d-center.svg",
  "3d-pan.svg",
  "3d-rotate.svg",
  "accelerometer-back.svg",
  "accelerometer-front.svg",
  "align-content-center.svg",
  "align-content-end.svg",
  "align-content-space-around.svg",
  "align-content-space-between.svg",
  "align-content-space-evenly.svg",
  "align-content-start.svg",
  "align-content-stretch.svg",
  "align-items-baseline.svg",
  "align-items-center.svg",
  "align-items-end.svg",
  "align-items-start.svg",
  "align-items-stretch.svg",
  "align-self-center.svg",
  "align-self-end.svg",
  "align-self-start.svg",
  "align-self-stretch.svg",
  "arrow-down.svg",
  "arrow-up-down-circle.svg",
  "arrow-up-down.svg",
  "arrow-up.svg",
  "bell.svg",
  "bin.svg",
  "bottom-panel-close.svg",
  "bottom-panel-open.svg",
  "brackets.svg",
  "breakpoint-circle.svg",
  "breakpoint-crossed-filled.svg",
  "breakpoint-crossed.svg",
  "brush-filled.svg",
  "brush.svg",
  "bug.svg",
  "bundle.svg",
  "check-circle.svg",
  "checkboxCheckmark.svg",
  "checkmark.svg",
  "chevron-double-right.svg",
  "chevron-left-dot.svg",
  "chevron-left.svg",
  "chevron-right.svg",
  "chevrons.svg",
  "chromeSelect.svg",
  "chromeSelectDark.svg",
  "clear-list.svg",
  "clear.svg",
  "cloud.svg",
  "code-circle.svg",
  "code.svg",
  "colon.svg",
  "color-picker-filled.svg",
  "color-picker.svg",
  "console-conditional-breakpoint.svg",
  "console-logpoint.svg",
  "cookie.svg",
  "copy.svg",
  "credit-card.svg",
  "cross-circle-filled.svg",
  "cross-circle.svg",
  "cross.svg",
  "custom-typography.svg",
  "database.svg",
  "deployed.svg",
  "device-fold.svg",
  "devices.svg",
  "dock-bottom.svg",
  "dock-left.svg",
  "dock-right.svg",
  "dock-window.svg",
  "document.svg",
  "dots-horizontal.svg",
  "dots-vertical.svg",
  "download.svg",
  "edit.svg",
  "empty.svg",
  "errorWave.svg",
  "exclamation.svg",
  "experiment-check.svg",
  "experiment.svg",
  "eye.svg",
  "feedback_button_icon.svg",
  "file-document.svg",
  "file-font.svg",
  "file-image.svg",
  "file-script.svg",
  "file-snippet.svg",
  "file-stylesheet.svg",
  "file-sync-badge.svg",
  "file-sync_icon.svg",
  "filter-clear.svg",
  "filter-filled.svg",
  "filter.svg",
  "flex-direction.svg",
  "flex-no-wrap.svg",
  "flex-wrap.svg",
  "folder.svg",
  "frame-crossed.svg",
  "frame-icon.svg",
  "frame.svg",
  "gear-filled.svg",
  "gear.svg",
  "gears.svg",
  "heap-snapshot.svg",
  "heap-snapshots.svg",
  "help.svg",
  "ic_dimension_single.svg",
  "ic_redo_16x16_icon.svg",
  "ic_undo_16x16_icon.svg",
  "iframe-crossed.svg",
  "iframe.svg",
  "import.svg",
  "info-filled.svg",
  "info.svg",
  "issue-cross-filled.svg",
  "issue-exclamation-filled.svg",
  "issue-questionmark-filled.svg",
  "issue-text-filled.svg",
  "justify-content-center.svg",
  "justify-content-end.svg",
  "justify-content-space-around.svg",
  "justify-content-space-between.svg",
  "justify-content-space-evenly.svg",
  "justify-content-start.svg",
  "justify-items-center.svg",
  "justify-items-end.svg",
  "justify-items-start.svg",
  "justify-items-stretch.svg",
  "keyboard-pen.svg",
  "large-arrow-right-filled.svg",
  "largeIcons.svg",
  "layers-filled.svg",
  "layers.svg",
  "left-panel-close.svg",
  "left-panel-open.svg",
  "lighthouse_logo.svg",
  "list.svg",
  "mediumIcons.svg",
  "memory.svg",
  "minus_icon.svg",
  "network-settings.svg",
  "node_search_icon.svg",
  "open-externally.svg",
  "pause.svg",
  "person.svg",
  "play.svg",
  "plus.svg",
  "popup.svg",
  "preview_feature_video_thumbnail.svg",
  "profile.svg",
  "record-start.svg",
  "record-stop.svg",
  "redo.svg",
  "refresh.svg",
  "replace.svg",
  "replay.svg",
  "resizeDiagonal.svg",
  "resizeHorizontal.svg",
  "resizeVertical.svg",
  "resume.svg",
  "revert.svg",
  "right-panel-close.svg",
  "right-panel-open.svg",
  "screen-rotation.svg",
  "search.svg",
  "securityIcons.svg",
  "select-element.svg",
  "settings_14x14_icon.svg",
  "shadow.svg",
  "smallIcons.svg",
  "snippet.svg",
  "star_outline.svg",
  "step-into.svg",
  "step-out.svg",
  "step-over.svg",
  "step.svg",
  "stop.svg",
  "survey_feedback_icon.svg",
  "switcherIcon.svg",
  "symbol.svg",
  "sync.svg",
  "table.svg",
  "top-panel-close.svg",
  "top-panel-open.svg",
  "treeoutlineTriangles.svg",
  "triangle-bottom-right.svg",
  "triangle-down.svg",
  "triangle-left.svg",
  "triangle-right.svg",
  "triangle-up.svg",
  "undo.svg",
  "warning-filled.svg",
  "warning.svg",
  "warning_icon.svg",
  "watch.svg",
]

devtools_src_svg_files = []

foreach(svg_image, devtools_svg_sources) {
  devtools_src_svg_files += [ "src/$svg_image" ]
}
